--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 <a class="nav-link active" aria-current="page" href="index.html">Semillero</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-highlightedd" href="#">Participantes</a>
+                                <a class="nav-link text-highlightedd" href="#participantes">Participantes</a>
                             </li>
                         </ul>
                     </div>
@@ -73,7 +73,7 @@
         <!-- MAIN -->
 
         <!-- PARTICIPANTS -->
-            <section id="participants" class="mt-4">
+            <section id="participantes" class="mt-4">
                 <div class="container">
                     <div class="row">
                         <div class="col text-center text-uppercase">
@@ -141,7 +141,7 @@
                         <div class="col-md-12 col-lg-4 mt-3 mb-4"></div>
                         <div class="col-md-12 col-lg-4 mt-3 mb-4">
                             <div class="card">
-                                <img src="./assets/images/oscar.jpg" class="card-img-top" alt="foto-diego">
+                                <img src="./assets/images/oscar.jpg" class="card-img-top" alt="foto-oscar">
                                 <div class="card-body">
                                     <h5 class="card-title">Oscar Fernando Sierra Esparza</h5>
                                     <p class="card-text"><strong><i class="fas fa-phone"></i></strong> 3003435190</p>
