--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
         crossorigin="anonymous"
         />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="./assets/css/styles.css">
+        
+        <link rel="stylesheet" href="assets/css/styles.css">
     </head>
     <body>
-        <!-- HEADER -->
+        <!-- header -->
         <header>
             <nav id="navbar" class="navbar navbar-expand-lg bg-dark navbar-dark">
                 <div class="container">
                     <a class="navbar-brand" href="index.html">
-                        <img src="./assets/images/logo.png" alt="logo">
+                        <img src="assets/images/logo.png" alt="logo">
                         Semillero Algorythm
                     </a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,20 +39,20 @@
                 </div>
             </nav>
         </header>
-        <!-- HEADER -->
+        <!-- /header -->
 
-        <!-- MAIN -->
+        <!-- main -->
         <section id="main">
             <div id="carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-pause="false">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./assets/images/carousel1.png" class="d-block w-100" alt="js">
+                        <img src="assets/images/carousel1.png" class="d-block w-100" alt="carousel1">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/images/carousel2.png" class="d-block w-100" alt="vuejs">
+                        <img src="assets/images/carousel2.png" class="d-block w-100" alt="carousel2">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/images/carousel3.png" class="d-block w-100" alt="nodejs">
+                        <img src="assets/images/carousel3.png" class="d-block w-100" alt="carousel3">
                     </div>
                     <div class="overlay">
                         <div class="container">
@@ -70,9 +71,9 @@
                 </div>
             </div>
         </section>
-        <!-- MAIN -->
+        <!-- /main -->
 
-        <!-- PARTICIPANTS -->
+        <!-- participantes -->
             <section id="participantes" class="mt-4">
                 <div class="container">
                     <div class="row">
@@ -84,7 +85,7 @@
                     <div class="row">
                         <div class="col-md-6 col-lg-4 mt-3 mb-4">
                             <div class="card">
-                                <img src="./assets/images/alix.jpg" class="card-img-top" alt="foto-alix">
+                                <img src="assets/images/alix.jpg" class="card-img-top" alt="foto-alix">
                                 <div class="card-body">
                                     <h5 class="card-title">Alix Teresa Bermudez Galindo</h5>
                                     <p class="card-text"><strong><i class="fas fa-phone"></i></strong> 3134783993</p>
@@ -94,7 +95,7 @@
                         </div>
                         <div class="col-md-6 col-lg-4 mt-3 mb-4">
                             <div class="card">
-                                <img src="./assets/images/gabriela.jpg" class="card-img-top" alt="foto-gabriela">
+                                <img src="assets/images/gabriela.jpg" class="card-img-top" alt="foto-gabriela">
                                 <div class="card-body">
                                     <h5 class="card-title">Gabriela Fonseca Santos</h5>
                                     <p class="card-text"><strong><i class="fas fa-phone"></i></strong> 3014617776</p>
@@ -104,7 +105,7 @@
                         </div>
                         <div class="col-md-6 col-lg-4 mt-3 mb-4">
                             <div class="card">
-                                <img src="./assets/images/jeison.jpg" class="card-img-top" alt="foto-jeison">
+                                <img src="assets/images/jeison.jpg" class="card-img-top" alt="foto-jeison">
                                 <div class="card-body">
                                     <h5 class="card-title">Jeison Leonel Contreras</h5>
                                     <p class="card-text"><strong><i class="fas fa-phone"></i></strong> 3014752442</p>
@@ -114,7 +115,7 @@
                         </div>
                         <div class="col-md-6 col-lg-4 mt-3 mb-4">
                             <div class="card">
-                                <img src="./assets/images/marlon.jpg" class="card-img-top" alt="foto-marlon">
+                                <img src="assets/images/marlon.jpg" class="card-img-top" alt="foto-marlon">
                                 <div class="card-body">
                                     <h5 class="card-title">Marlon Estives Ríos Alfonso</h5>
                                     <p class="card-text"><strong><i class="fas fa-phone"></i></strong> 3212114192</p>
@@ -124,7 +125,7 @@
                         </div>
                         <div class="col-md-6 col-lg-4 mt-3 mb-4">
                             <div class="card">
-                                <img src="./assets/images/lina.jpg" class="card-img-top" alt="foto-lina">
+                                <img src="assets/images/lina.jpg" class="card-img-top" alt="foto-lina">
                                 <div class="card-body">
                                     <h5 class="card-title">Lina Paola Espinosa Zambrano</h5>
                                     <p class="card-text"><strong><i class="fas fa-phone"></i></strong> 3043771921</p>
@@ -141,7 +142,7 @@
                         <div class="col-md-12 col-lg-4 mt-3 mb-4"></div>
                         <div class="col-md-12 col-lg-4 mt-3 mb-4">
                             <div class="card">
-                                <img src="./assets/images/oscar.jpg" class="card-img-top" alt="foto-oscar">
+                                <img src="assets/images/oscar.jpg" class="card-img-top" alt="foto-oscar">
                                 <div class="card-body">
                                     <h5 class="card-title">Oscar Fernando Sierra Esparza</h5>
                                     <p class="card-text"><strong><i class="fas fa-phone"></i></strong> 3003435190</p>
@@ -153,9 +154,9 @@
                     </div>
                 </div>
             </section>
-        <!-- PARTICIPANTS -->
+        <!-- /participantes -->
 
-        <!-- FOOTER -->
+        <!-- footer -->
         <footer id="footer" class="pb-4 pt-4">
             <div class="container">
                 <div class="row text-center">
@@ -181,7 +182,7 @@
                 <h6 class="text-center mt-4 text-light">© Copyright - All rights reserved</h6>
             </div>
         </footer>
-        <!-- FOOTER -->
+        <!-- /footer -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     </body>
 </html>
